Avoid deprecated Class.newInstance()